# query_ai

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logging.rs
parser/: Cargo.toml
parser/src/: ast_extractor.rs  file_handler.rs  language_support.rs  lib.rs  metadata.rs
parser/tests/: parser_tests.rs
repositories/: Cargo.toml
repositories/src/: lib.rs
repositories/tests/: clone_tests.rs  config_tests.rs  integration_tests.rs
