[workspace]
members = [
    "crates/cli",
    "crates/core",
    #"crates/parser",
    #"crates/storage",
    #"crates/embeddings",
]
resolver = "2"

[workspace.dependencies]
# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
